src/pages/styles.scss
.section {
  @apply flex flex-col gap-4;
}

.section__heading {
  @apply text-lg font-bold uppercase lg:text-base;
}

.nav__listitem {
  @apply text-sm font-bold uppercase;

  // =============================================================
  // Source: https://tobiasahlin.com/blog/css-trick-animating-link-underlines/
  // =============================================================
  a {
    @apply text-slate-400;
    position: relative;
    text-decoration: none;
  }

  a:hover {
    @apply text-slate-300;
  }

  a:hover::before {
    @apply text-slate-300;
    transform: scaleX(1);
  }

  a.active {
    @apply text-slate-300;
  }

  a.active::before {
    @apply text-slate-300;
    transform: scaleX(1);
  }

  /* Animate the line from the left */
  a::before {
    @apply bg-slate-300;
    content: '';
    position: absolute;
    display: block;
    width: 100%;
    height: 2px;
    bottom: 0;
    left: 0;
    transform: scaleX(0);
    transform-origin: top left;
    transition: transform 0.3s ease;
  }
  // =============================================================
}

.description__text {
  @apply text-sm text-slate-400 leading-normal;
}

.date {
  @apply text-sm text-slate-400 uppercase lg:w-1/3;
}

